--- a/.github/workflows/tracker.yml
+++ b/.github/workflows/tracker.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
-        run: pip install requests
+        run: pip install requests beautifulsoup4
 
       - name: Run tracker
         env:
